--- a/wwwroot/css/bootstrap.custom.scss
+++ b/wwwroot/css/bootstrap.custom.scss
@@ -1,7 +1,20 @@
 ﻿$primary: #25c791;
+$highlight: #c74025;
 
 @import "../lib/bootstrap/scss/bootstrap";
 
 nav.navbar {
     background-color: $primary;
 }
+
+.selected {
+    background-color: rgba(37, 199, 145, 0.3);
+}
+
+div.dropdown-multicol > div.dropdown-col .dropdown-item:hover {
+    --bs-dropdown-link-hover-bg: rgba(37, 199, 145, 0.3);
+}
+
+.dropdown-item.highlight {
+    color: $highlight !important;
+} 
