--- a/Views/Cards/Subject.cshtml
+++ b/Views/Cards/Subject.cshtml
@@ -28,7 +28,7 @@
 	<div class="col-12 subject-buttons">
 		@foreach (var subject in Model.OtherSubjects)
 		{
-			<button type="button" class="btn btn-light btn-lg">@subject.Name</button>
+			<a class="btn btn-light btn-lg" asp-action="Subject" asp-route-subjectName="@subject.Name" asp-route-page="1">@subject.Name</a>
 		}
 	</div>
 
@@ -39,77 +39,26 @@
 	</div>
 	<div class="col-12">
 		<div class="row">
-			<div class="col-4 pb-4 d-flex align-items-stretch">
-				<div class="card">
-					<div class="card-body d-flex flex-column justify-content-between">
-						<div class="row">
-							<h5 class="card-title">Name</h5>
-							<h6 class="card-subtitle mb-2 text-muted">26 cards</h6>
-							<p class="card-text">
-								DESCRIPTION Some quick example text to build on the card title and make up the
-								bulk of the card's content.
-							</p>
-						</div>
-						<div class="row">
-							<div class="col-12 d-flex justify-content-between align-items-center"><p class="m-0">created by: Bob</p><a href="#" class="btn btn-light">Preview</a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-4 pb-4 d-flex align-items-stretch">
-				<div class="card">
-					<div class="card-body d-flex flex-column justify-content-between">
-						<div class="row">
-							<h5 class="card-title">Name</h5>
-							<h6 class="card-subtitle mb-2 text-muted">26 cards</h6>
-							<p class="card-text">
-								DESCRIPTION Some quick example text to build on the card title and make up the
-								bulk of the card's content.
-							</p>
-						</div>
-						<div class="row">
-							<div class="col-12 d-flex justify-content-between align-items-center"><p class="m-0">created by: Bob</p><a href="#" class="btn btn-light">Preview</a></div>
+			@foreach (var cardSet in @Model.CardSubject.CardSets)
+			{
+				<div class="col-4 pb-4 d-flex align-items-stretch">
+					<div class="card">
+						<div class="card-body d-flex flex-column justify-content-between">
+							<div class="row">
+								<h5 class="card-title">@cardSet.Name</h5>
+								@*<h6 class="card-subtitle mb-2 text-muted">@cardSet.Cards.Count()</h6>*@
+								<p class="card-text">
+									@cardSet.Description
+								</p>
+							</div>
+							<div class="row">
+								<div class="col-12 d-flex justify-content-between align-items-center"><p class="m-0">created by: Bob</p><a href="#" class="btn btn-light">Preview</a></div>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-4 pb-4 d-flex align-items-stretch">
-				<div class="card">
-					<div class="card-body d-flex flex-column justify-content-between">
-						<div class="row">
-							<h5 class="card-title">Name</h5>
-							<h6 class="card-subtitle mb-2 text-muted">26 cards</h6>
-							<p class="card-text">
-								DESCRIPTION Some quick example text to build on the card title and make up the
-								bulk of the card's content.
-								DESCRIPTION Some quick example text to build on the card title and make up the
-								bulk of the card's content.
-							</p>
-						</div>
-						<div class="row">
-							<div class="col-12 d-flex justify-content-between align-items-center"><p class="m-0">created by: Bob</p><a href="#" class="btn btn-light">Preview</a></div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-4 pb-4 d-flex align-items-stretch">
-				<div class="card">
-					<div class="card-body d-flex flex-column justify-content-between">
-						<div class="row">
-							<h5 class="card-title">Name</h5>
-							<h6 class="card-subtitle mb-2 text-muted">26 cards</h6>
-							<p class="card-text">
-								DESCRIPTION Some quick example text to build on the card title and make up the
-								bulk of the card's content.
-							</p>
-						</div>
-						<div class="row">
-							<div class="col-12 d-flex justify-content-between align-items-center"><p class="m-0">created by: Bob</p><a href="#" class="btn btn-light">Preview</a></div>
-						</div>
-					</div>
-				</div>
-			</div>
+			}
 		</div>
 	</div>
-
+	<partial name="_CardSetListPagination" model="@Model.Pagination" />
 </div>
