--- a/Views/Cards/Subject.cshtml
+++ b/Views/Cards/Subject.cshtml
@@ -1,11 +1,19 @@
 ﻿@model SubjectPageViewModel
 
-
 <div class="row">
 	<div class="col-12">
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item" aria-current="page"><a asp-controller="Cards" asp-action="Category" asp-route-categoryName="@Model.CardSubject.CardCategory.Name">@Model.CardSubject.CardCategory.Name</a></li>
+				<li class="breadcrumb-item" aria-current="page">
+					<a asp-action="Sets" asp-route-page="1">All sets</a>
+				</li>
+				<li class="breadcrumb-item" aria-current="page">
+					<a asp-action="Category"
+					   asp-route-categoryName="@Model.CardSubject.CardCategory.Name"
+					   asp-route-page="1">
+						@Model.CardSubject.CardCategory.Name
+					</a>
+				</li>
 				<li class="breadcrumb-item active" aria-current="page">@Model.CardSubject.Name</li>
 			</ol>
 		</nav>
@@ -13,9 +21,9 @@
 </div>
 <div class="row">
 	<div class="col-12">
-		<div class="container-fluid languages rounded text-dark p-3">
+		<div class="container-fluid cat-sub-title rounded text-dark p-3">
 			<div class="container py-3 px-5">
-				<p class="lead">Flashcard sets</p>
+				<p class="lead">@(Model.CardSubject.CardCategory.Name) sets</p>
 				<p class="display-6"><strong>@Model.CardSubject.Name</strong></p>
 			</div>
 		</div>
@@ -23,42 +31,22 @@
 </div>
 <div class="row">
 	<div class="col-12">
-		<p class="mt-5 mb-3"><strong>Different subject?</strong></p>
+		<p class="mt-3 mb-3"><strong>Different subject?</strong></p>
 	</div>
-	<div class="col-12 subject-buttons">
+	<div class="col-12 subject-category-buttons">
 		@foreach (var subject in Model.OtherSubjects)
 		{
-			<a class="btn btn-light btn-lg" asp-action="Subject" asp-route-subjectName="@subject.Name" asp-route-page="1">@subject.Name</a>
+			<a class="btn btn-light different-cat-sub"
+		   asp-action="Subject"
+		   asp-route-subjectName="@subject.Name"
+		   asp-route-page="1">
+				@subject.Name
+			</a>
 		}
 	</div>
-
 </div>
 <div class="row">
-	<div class="col-12">
-		<p class="mt-5 mb-3"><strong>Flashcard sets</strong></p>
-	</div>
-	<div class="col-12">
-		<div class="row">
-			@foreach (var cardSet in @Model.CardSubject.CardSets)
-			{
-				<div class="col-4 pb-4 d-flex align-items-stretch">
-					<div class="card">
-						<div class="card-body d-flex flex-column justify-content-between">
-							<div class="row">
-								<h5 class="card-title">@cardSet.Name</h5>
-								@*<h6 class="card-subtitle mb-2 text-muted">@cardSet.Cards.Count()</h6>*@
-								<p class="card-text">
-									@cardSet.Description
-								</p>
-							</div>
-							<div class="row">
-								<div class="col-12 d-flex justify-content-between align-items-center"><p class="m-0">created by: Bob</p><a href="#" class="btn btn-light">Preview</a></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			}
-		</div>
-	</div>
+	<partial name="_CardSetList" model="@Model.CardSubject.CardSets" />
 	<partial name="_CardSetListPagination" model="@Model.Pagination" />
 </div>
+<partial name="_ModalPreviewCardSet" />
