--- a/Views/Shared/_NavbarContent.cshtml
+++ b/Views/Shared/_NavbarContent.cshtml
@@ -11,7 +11,7 @@
 					<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+					<a class="nav-link text-dark" asp-controller="Cards" asp-action="Sets" asp-route-page="1">All sets</a>
 				</li>
 				@await Component.InvokeAsync("NavCategories")
 				<li class="nav-item">
