--- a/wwwroot/css/bootstrap.custom.scss
+++ b/wwwroot/css/bootstrap.custom.scss
@@ -19,7 +19,13 @@ div.dropdown-multicol > div.dropdown-col .dropdown-item:hover {
     color: $highlight !important;
 }
 
-.subject-buttons button{
+.subject-category-buttons {
+    overflow-x: auto;
+    padding-bottom: 10px;
+    white-space: nowrap;
+}
+
+.subject-category-buttons button {
     margin-right: 4px;
     font-size: 12pt;
     padding: 12px 20px;
@@ -41,4 +47,7 @@ div.question-answer div input {
 div.question-answer div input:focus {
     border-color: $highlight;
     
+}
+.btn.btn-light.different-cat-sub {
+    background-color: white;
 }
