--- a/Views/Cards/Sets.cshtml
+++ b/Views/Cards/Sets.cshtml
@@ -21,7 +21,7 @@
 </div>
 <div class="row">
 	<div class="col-12">
-		<p class="mt-3 mb-3"><strong>Specific category?</strong></p>
+		<p class="my-3"><strong>Specific category?</strong></p>
 	</div>
 	<div class="col-12 subject-category-buttons">
 		@foreach (var category in Model.CardCategories)
@@ -29,12 +29,17 @@
 			<a class="btn btn-light different-cat-sub"
 		   asp-action="Category"
 		   asp-route-categoryName="@category.Name"
-		   asp-route-page="1">
+		   asp-route-page="1"
+		   asp-route-name="@Model.Filters.Name"
+		   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
+		   asp-route-author="@Model.Filters.Author"
+		   asp-route-sort="@Model.Filters.SortBy">
 				@category.Name
 			</a>
 		}
 	</div>
 </div>
+<partial name="_SetsFilters" model="@Model.Filters" />
 <div class="row">
 	<partial name="_CardSetList" model="@Model.CardSets" />
 	<partial name="_CardSetListPagination" model="@Model.Pagination" />
