--- a/Views/Shared/_CardSetListPagination.cshtml
+++ b/Views/Shared/_CardSetListPagination.cshtml
@@ -1,10 +1,12 @@
 ﻿@model PaginationViewModel
 
 <nav aria-label="Pagination">
-	<ul class="pagination d-flex justify-content-center align-items-end">
-		@{
-			if (Model.CurrentPage != 1)
-			{
+	@{
+		if (Model.NumberOfPages >= 1)
+		{
+			<ul class="pagination d-flex justify-content-center align-items-end">
+				@if (Model.CurrentPage != 1)
+				{
 				<li class="page-item">
 					<a class="page-link" asp-route-page="1" aria-label="First">
 						<span aria-hidden="true">&laquo;</span>
@@ -15,26 +17,20 @@
 						<span aria-hidden="true">&lsaquo;</span>
 					</a>
 				</li>
-			}
-		}
-		@{
-			for (int i = (Model.CurrentPage >= 4 ? Model.CurrentPage - 2 : 1); i <= Model.NumberOfPages && i <= (Model.CurrentPage + 2); i++)
-			{
-				if (Model.CurrentPage == i)
-				{
-					<li class="page-item active"><a class="page-link disabled-link" asp-route-page="@i">@i</a></li>
 				}
-				else
+				@for (int i = (Model.CurrentPage >= 4 ? Model.CurrentPage - 2 : 1); i <= Model.NumberOfPages && i <= (Model.CurrentPage + 2); i++)
 				{
-					<li class="page-item"><a class="page-link" asp-route-page="@i">@i</a></li>
+					if (Model.CurrentPage == i)
+					{
+						<li class="page-item active"><a class="page-link disabled-link" asp-route-page="@i">@i</a></li>
+					}
+					else
+					{
+						<li class="page-item"><a class="page-link" asp-route-page="@i">@i</a></li>
+					}
 				}
-			}
-		}
-
-
-		@{
-			if (Model.CurrentPage != Model.NumberOfPages)
-			{
+				@if (Model.CurrentPage != Model.NumberOfPages)
+				{
 				<li class="page-item">
 					<a class="page-link" asp-route-page="@(Model.CurrentPage + 1)" aria-label="Next">
 						<span aria-hidden="true">&rsaquo;</span>
@@ -45,7 +41,14 @@
 						<span aria-hidden="true">&raquo;</span>
 					</a>
 				</li>
-			}
+				}
+			</ul>
 		}
-	</ul>
+		else
+		{
+			<div class="text-center">
+			<p>No sets match the filters.</p>
+			</div>
+		}
+	}
 </nav>
